hunt.html is added to the repo

--- a/hunt.html
+++ b/hunt.html
@@ -22,49 +22,105 @@
 <br>
 
 <div class="row">
-    <div class="col-sm-1" ><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px;  padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="a" onclick ="check(0)" alt="tree" style="width: 100px;height: 100px;  padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="b" onclick ="check(1)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="c" onclick ="check(2)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="d" onclick ="check(3)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="e" onclick ="check(4)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
    
 </div>
 
 <div class="row">
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"  alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="f" onclick ="check(5)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="g" onclick ="check(6)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="h" onclick ="check(7)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="i" onclick ="check(8)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="j" onclick ="check(9)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
    
 </div>
 
 <div class="row">
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="k" onclick ="check(10)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="l" onclick ="check(11)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="m" onclick ="check(12)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="n" onclick ="check(13)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="o" onclick ="check(14)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
    
 </div>
 
 <div class="row">
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="p" onclick ="check(15)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="q" onclick ="check(16)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="r" onclick ="check(17)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="s" onclick ="check(18)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="t" onclick ="check(19)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
    
 </div>
 
 <div class="row">
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
-    <div class="col-sm-1"><img src="greentreeimage.jpg"   alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="u" onclick ="check(20)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="v" onclick ="check(21)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="w" onclick ="check(22)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="x" onclick ="check(23)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
+    <div class="col-sm-1"><img src="greentreeimage.jpg" id="y" onclick ="check(24)" alt="tree" style="width: 100px;height: 100px; padding-bottom: 5%;"></div>
    
 </div>
 </div>
 </body>
+<script>
+
+  var ids=["a","b","c","d","e","f","g","h","i","j","k","l","m","n","o","p","q","r","s","t","u","v","w","x","y"]
+  var shakeCount=0;
+  var birdlLocation=18;
+  function check(position)
+    {
+      id=ids[position]
+      img_pos=document.getElementById(id)
+      if(position==birdlLocation)
+         img_pos.src="Ashy tit.jfif"
+         else
+         img_pos.src="nest.jfif"
+
+         shakeCount=shakeCount+1;
+         document.getElementById("shakes").innerHTML = "Number of shakes is " + shakeCount;
+       document.getElementById("score").innerHTML="The score is "+ locationScore(position, birdlLocation); 
+    }
+  function locationScore (pos1, pos2)
+  {
+    var row1, row2, col1, col2
+        var data=[[0,1,2,3,4], [5,6,7,8,9], [10,11,12,13,14], [15,16,17,18,19], [20,21,22,23,24]]
+        for(let i=0; i<data.length;i++)
+        {
+            for(let j=0;j<data[i].length;j++)
+            {
+                if(pos1==data[i][j])
+                {
+                    row1=i
+                    col1=j
+                }
+            }
+        }
+        for(let i=0; i<data.length;i++)
+        {
+            for(let j=0;j<data[i].length;j++)
+            {
+                if(pos2==data[i][j])
+                {
+                    row2=i
+                    col2=j
+                }
+            }
+        }
+
+        if(row1==row2)
+         return 1
+        else if(col1==col2)
+          return 1
+        else if (Math.abs(pos1-pos2)==4 || Math.abs(pos1-pos2)==6)
+         return 1
+        else
+         return 0
+
+       }
+</script>
 </html>
